--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -1672,7 +1672,7 @@ input[type="button"] {
 /* Content Area */
 #content {
     //padding: 20px 0 30px 0;
-    padding: 0;
+    padding: 0 0 30px 0;
     //neu zugefügt
     background-color: $colorPrimary;
     //margin-bottom: auto;    
