--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -52,3 +52,6 @@ Main CSS File for Wordpress Theme FAU
 // Import Evangelische Termine
 @import "plugin-et";
 
+// Import Kalender-Plugin
+@import "plugin-calendar"
+
